examples/st2110/valid/03_typical_hd_video.sdp
v=0
o=- 5551234567 1 IN IP4 192.168.0.10
s=Studio A — 1080i29.97 YCbCr 10-bit
t=0 0
a=ts-refclk:ptp=IEEE1588-2008:08-00-11-FF-FE-22-33-44:127
m=video 20000 RTP/AVP 96
c=IN IP4 239.150.0.1/64
b=AS:1485000
a=rtpmap:96 raw/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; interlace; exactframerate=30000/1001; depth=10; TCS=SDR; colorimetry=BT709; PM=2110GPM; TP=2110TPNL; SSN=ST2110-20:2017
a=mediaclk:direct=0
